# yatter

./: .coveragerc  .gitignore  README.md  pyproject.toml
.github/workflows/: coverage.yml  pypi-publish.yml  testgha.yml
src/yatter/: __init__.py  constants.py  function.py  mapping.py  normalization.py  predicateobject.py  source.py  subject.py  target.py  termmap.py
test/normalize/NORMKEYS-01/: mapping.yml  mapping_normalized.yml  test_normkeys01.py
test/normalize/NORMKEYS-02/: mapping.yml  mapping_normalized.yml  test_normkeys02.py
test/normalize/NORMKEYS-03/: mapping.yml  mapping_normalized.yml  test_normkeys03.py
test/normalize/NORMKEYS-04/: mapping.yml  mapping_normalized.yml  test_normkeys04.py
test/normalize/NORMKEYS-05/: mapping.yml  mapping_normalized.yml  test_normkeys05.py
test/normalize/NORMKEYS-06/: mapping.yml  mapping_normalized.yml  test_normkeys06.py
test/normalize/NORMKEYS-07/: mapping.yml  mapping_normalized.yml  test_normkeys07.py
test/normalize/NORMKEYS-08/: mapping.yml  mapping_normalized.yml  test_normkeys08.py
test/normalize/NORMKEYS-09/: mapping.yml  mapping_normalized.yml  test_normkeys09.py
test/normalize/NORMKEYS-10/: mapping.yml  mapping_normalized.yml  test_normkeys10.py
test/normalize/NORMKEYS-11/: mapping.yml  mapping_normalized.yml  test_normkeys11.py
test/normalize/NORMKEYS-12/: test_normkeys12.py
test/normalize/NORMKEYS-13/: mapping_normalized.yml
test/normalize/NORMKEYS-14/: mapping.yml  mapping_normalized.yml  test_normkeys14.py
test/normalize/NORMKEYS-15/: mapping.yml  mapping_normalized.yml  (+1 more)
(+107 files in other folders)
